--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,81 +1,87 @@
-<div class="header p-3 border-bottom d-flex justify-content-between">
-  <!-- left data  -->
-  <div class=" d-flex align-items-center" style="font-size: 11px;">
 
-    <div class="border-end p-2">
-      <h6 class="text-center">Communidad</h6>
-      <div style="color: red;">Perdida: MX0.00</div>
-      <div>Comision: MX 1,525.20</div>
-    </div>
+  <div class=" d-flex justify-content-between">
 
-    <div class="border-end p-2">
-      <h6 class="text-center">Instalado</h6>
-      <div>30 Dias: MX33.140.00</div>
-      <div>En Semena: MX990.00</div>
-    </div>
+    <!-- left data  -->
+    <div class=" d-flex align-items-center col-6 me-3" style="font-size: 9px;">
 
-    <div class="border-end p-2">
-      <h6 class="text-center">Cancelado</h6>
-      <div style="color: red;">En Semana: MX0.00</div>
-      <div style="color: red;">Semana Ant: MX480.00</div>
-    </div>
+      <div class="border-end pe-2">
+        <h6 class="text-center fw-bold mb-2">Communidad</h6>
+        <div style="color: red;" class="line text-nowrap">Perdida: MX0.00</div>
+        <div class="text-nowrap">Comision: MX 1,525.20</div>
+      </div>
 
-    <div class="p-2">
-      <h6 class="text-center">Caidas</h6>
-      <div style="color: red;">En Semana: 0</div>
-      <div style="color: red;">Sem Anterior: 0</div>
-    </div>
+      <div class="border-end p-2">
+        <h6 class="text-center fw-bold mb-2">Instalado</h6>
+        <div class="line text-nowrap">30 Dias:MX33.140.00</div>
+        <div class="text-nowrap">En Semena: MX990.00</div>
+      </div>
 
-    <div>
-      <img src="../../assets/images/An blue turquoise lotus emitting a bright blue lig 1 1.png" width="61" height="43"
-        alt="blue flower" />
-    </div>
-  </div>
+      <div class="border-end p-2">
+        <h6 class="text-center fw-bold mb-2">Cancelado</h6>
+        <div style="color: red;" class="line text-nowrap">En Semana: MX0.00</div>
+        <div style="color: red;" class="text-nowrap">Semana Ant: MX480.00</div>
+      </div>
 
-  <!-- rightside icons  -->
-  <div class="d-flex align-items-center">
-<!-- theme toggle  -->
-    <div class="app-navbar-item me-3">
-      <label class="switch">
-        <input type="checkbox">
-        <span class="slider round"></span>
-      </label>
-    </div>
+      <div class="p-2">
+        <h6 class="text-center fw-bold mb-2">Caidas</h6>
+        <div style="color: red;" class="line text-wrap">En Semana: 0</div>
+        <div style="color: red;" class="text-nowrap">Sem Anterior: 0</div>
+      </div>
 
-
-    <div class="app-navbar-item me-3">
-      <img src="../../assets/images/icons/Vector (4).png" height="18" width="18" />
-    </div>
-
-    <div class="app-navbar-item me-3">
-      <img src="../../assets/images/icons/calender.png" height="18" width="18" />
-    </div>
-
-    <div class="app-navbar-item me-3">
-      <img src="../../assets/images/icons/whatsapp.png" height="18" width="18" />
-    </div>
-
-
-    <div class="app-navbar-item me-3">
-      <img src="../../assets/images/icons/chat.png" height="18" width="18" />
-    </div>
-
-    <a href="#" class="notification me-3">
-      <img src="../../assets/images/icons/notification.png" height="18" width="18" />
-      <span class="badge">1</span>
-    </a>
-<!-- login button  -->
-    <div class="dropdown">
-    <button type="button" class="but dropdown-toggle d-flex align-items-center pe-2 text-light-emphasis" data-bs-toggle="dropdown">
-      <img class="rounded-circle me-2" width="30" height="30" src="../../assets/images/avatar/Ellipse 1.png" alt="">
-      Andrea
-      <a href="#"><i class="bi bi-chevron-down fs-5 text-black mx-2"></i></a>
-    </button>
-      <div class="dropdown-menu">
-        Login form
+      <div>
+        <img src="../../assets/images/An blue turquoise lotus emitting a bright blue lig 1 1.png" width="61" height="43"
+          alt="blue flower" class="d-block me-5"/>
       </div>
     </div>
-  
 
+    <!-- rightside icons  -->
+    <div class="d-flex justify-content-end align-items-center">
+      <!-- theme toggle  -->
+      <div class="app-navbar-item me-3">
+        <label class="switch">
+          <input type="checkbox">
+          <span class="slider round"></span>
+        </label>
+      </div>
+
+
+      <button class="app-navbar-item me-1">
+        <img src="../../assets/images/icons/Vector (4).png" height="18" width="18" />
+      </button>
+
+      <button class="app-navbar-item me-1">
+        <img src="../../assets/images/icons/calender.png" height="18" width="18" />
+      </button>
+
+      <button class="app-navbar-item me-1">
+        <img src="../../assets/images/icons/whatsapp.png" height="18" width="18" />
+      </button>
+
+
+      <button class="app-navbar-item me-1">
+        <img src="../../assets/images/icons/chat.png" height="18" width="18" />
+      </button>
+
+      <button class="d-block me-2 d-flex align-items-start">
+        <img src="../../assets/images/icons/notification.png" height="18" width="18" />
+        <span class="badge notbadge rounded-circle">1</span>
+      </button>
+      <!-- login button  -->
+      <div class="dropdown">
+        <button type="button" class="but dropdown-toggle d-flex align-items-center pe-2 text-light-emphasis"
+          data-bs-toggle="dropdown">
+          <div class="d-flex align-items-end">
+            <img class="rounded-circle" width="30" height="30" src="../../assets/images/avatar/Ellipse 1.png" alt="">
+            <span class="badge rounded-circle userbadge me-1">1</span>
+          </div>
+          Andrea
+          <a href="#"><i class="bi bi-chevron-down fs-5 text-black mx-2"></i></a>
+        </button>
+        <div class="dropdown-menu">
+          Login form
+        </div>
+      </div>
+
+
+    </div>
   </div>
-</div>
