mi comunidad done

--- a/src/app/agrigar-hijos/agrigar-hijos.component.html
+++ b/src/app/agrigar-hijos/agrigar-hijos.component.html
@@ -1,4 +1,4 @@
-<div class=" container-fluid d-flex border-bottom p-3 align-items-baseline">
+<div class="d-flex border-bottom p-3 align-items-baseline">
     <h2>Agregar Hijos</h2>
 </div>
 
@@ -19,7 +19,7 @@
                 <form class="d-flex">
                     <div class="input-group shadow">
                         <span class="input-group-text text-bg-light"><i class="bi bi-calendar-minus"></i></span>
-                        <select class="form-select bg-white" disabled>
+                        <select class="form-select bg-white">
                             <option>1/22/24</option>
                             <option>1/23/24</option>
                             <option>1/24/24</option>
@@ -27,7 +27,7 @@
                     </div>
                     <div class="input-group shadow">
                         <span class="input-group-text text-bg-light"><i class="bi bi-calendar-minus"></i></span>
-                        <select class="form-select bg-white" disabled>
+                        <select class="form-select bg-white">
                             <option>1/22/24</option>
                             <option>1/23/24</option>
                             <option>1/24/24</option>
