--- a/src/app/mi-ingresos/mi-ingresos.component.html
+++ b/src/app/mi-ingresos/mi-ingresos.component.html
@@ -171,6 +171,8 @@ angular material sorting is installed and ready to use -->
       </table>
 
     </div>
+
+    <!-- pagination  -->
     <div class="d-flex justify-content-between align-items-center">
       <button class="chartnav prev" type="button">
         &#60;&#60; Previous</button>
