--- a/src/app/top-20-slider/top-20-slider.component.html
+++ b/src/app/top-20-slider/top-20-slider.component.html
@@ -1,37 +1,37 @@
 <ul class="bxslider" id="top20">
     <li class="">
         <img src="../../assets/images/avatar/Ellipse 6.png" />
-        <span class="sliderbadge">9</span>
+        <span class="sliderbadge badge rounded-circle">9</span>
     <p class="fs-6 text-center">Diego Mier Rodriguez</p>
     <p class="h5 text-center">MX24,880.00</p>
     </li>
     <li>
         <img src="../../assets/images/avatar/Ellipse 61.png" />
-        <span class="sliderbadge">10</span>
+        <span class="sliderbadge badge rounded-circle">10</span>
         <p class="fs-6 text-center">Diego Mier Rodriguez</p>
         <p class="h5 text-center">MX24,880.00</p>
     </li>
     <li>
         <img src="../../assets/images/avatar/Ellipse 62.png" />
-        <span class="sliderbadge">11</span>
+        <span class="sliderbadge badge rounded-circle">11</span>
         <p class="fs-6 text-center">Diego Mier Rodriguez</p>
         <p class="h5 text-center">MX24,880.00</p>
     </li>
     <li>
         <img src="../../assets/images/avatar/Ellipse 63.png" />
-        <span class="sliderbadge">12</span>
+        <span class="sliderbadge badge rounded-circle">12</span>
         <p class="fs-6 text-center">Diego Mier Rodriguez</p>
         <p class="h5 text-center">MX24,880.00</p>
     </li>
     <li>
         <img src="../../assets/images/avatar/Ellipse 64.png" />
-        <span class="sliderbadge">13</span>
+        <span class="sliderbadge badge rounded-circle">13</span>
         <p class="fs-6 text-center">Diego Mier Rodriguez</p>
         <p class="h5 text-center">MX24,880.00</p>
     </li>
     <li>
         <img src="../../assets/images/avatar/Ellipse 65.png" />
-        <span class="sliderbadge">14</span>
+        <span class="sliderbadge badge rounded-circle">14</span>
         <p class="fs-6 text-center">Diego Mier Rodriguez</p>
         <p class="h5 text-center">MX24,880.00</p>
     </li>
