sidear css and darkmode toggle css

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,8 @@
 
-  <div class=" d-flex justify-content-between">
+  <div class=" d-flex justify-content-between p-3">
 
     <!-- left data  -->
-    <div class=" d-flex align-items-center col-6 me-3" style="font-size: 9px;">
+    <div class=" d-flex align-items-center col-6 me-4" style="font-size: 9px;">
 
       <div class="border-end pe-2">
         <h6 class="text-center fw-bold mb-2">Communidad</h6>
