--- a/src/app/miperfile/miperfile.component.html
+++ b/src/app/miperfile/miperfile.component.html
@@ -1,6 +1,6 @@
 <!-- page title  -->
-<div class="d-flex border-bottom p-3 align-items-baseline">
-    <h2>Mi Perfile</h2>
+<div class="d-flex border p-3 align-items-baseline">
+    <h2 class="fw-medium">Mi Perfile</h2>
     <h4 class="ms-3 title fw-light greytext">Administracion de perfile</h4>
 </div>
 <div class="main p-3">
