--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,14 +1,8 @@
-<div class="d-flex flex-column flex-shrink-0  bg-body-tertiary bar">
-    <!-- logo  -->
-    <div class="logo d-flex container-fluid p-4">
-        <img src="../../assets/images/logo/pakoalogo 1.png" alt="pakoa logo" width="142" height="56" class="me-3">
-        <img src="../../assets/images/logo/antorchaff 1.png" alt="logo icon" width="47" height="48">
-        <button class="btn m-2"><img src=".././assets/images/icons/Frame 194.png"></button>
-    </div>
+<div class="d-flex flex-column align-items-start bar">
 
     <!-- search box -->
-    <div class="d-flex justify-content-start">
-    <form style="width: 15rem">
+    <div class="d-flex justify-content-center mt-3">
+    <form style="width: 13rem">
         <div class="input-group m-4">
             <button class=" searchbox input-group-text" type="button"> <i class="bi bi-search"></i>
             </button>
@@ -23,8 +17,8 @@
     <ul class="nav nav-pills p-3 flex-column mb-auto">
         <!-- Dashboard -->
         <li class="nav-item">
-            <a class="nav-link text-white" routerLink="">
-                <img src="../../assets/images/icons/Vector.png" width="20" height="20" class="me-2" alt="user icon">Mi
+            <a class="nav-link text-white active" routerLink="">
+                <i class="bi bi-person-fill me-2 fs-5"></i>Mi
                 Perfile
             </a>
         </li>
@@ -67,21 +61,20 @@
 
         <li class="nav-item">
             <a class="nav-link text-white" routerLink="misPaginas" routerLinkActive="active">
-                <img src="../../assets/images/icons/flag.png" width="16" height="16" class="me-2" alt="user icon">Mi
+                <i class="bi bi-flag-fill me-2 fs-5"></i>Mi
                 Paginas
             </a>
         </li>
 
         <li class="nav-item">
             <a class="nav-link text-white" routerLink="agregarHijos" routerLinkActive="active">
-                <img src="../../assets/images/icons/Group 2.png" width="16" height="16" class="me-2"
-                    alt="user icon">Agregar Hijos
+                <i class="bi bi-person-plus-fill me-2 fs-5"></i>Agregar Hijos
             </a>
         </li>
 
         <li class="nav-item">
             <a class="nav-link text-white" routerLink="micomunidad" routerLinkActive="active">
-                <img src="../../assets/images/icons/Group 4.png" width="16" height="16" class="me-2" alt="user icon">Mi
+                <i class="bi bi-people-fill me-2 fs-5"></i>Mi
                 Comunidad
             </a>
         </li>
