--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,3 +7,7 @@
     top:20px;
     left:-100px;
 }
+.bar {
+    background-image: url(../assets/images/backgrounds/Frame\ 16\ \(1\).png);
+    height: 100%;
+}
