--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,34 @@
-<div class="container-fluid ">
-    <div class="row">
+<div class="container-fluid m-0 p-0">
+  <div class="d-flex flex-column">
+    <div class="d-flex justify-content-start">
+      <!-- logo  -->
+      <div class="logo d-flex container-fluid align-items-center " style="width: 20%">
+        <img src="../../assets/images/logo/pakoalogo 1.png" alt="pakoa logo" width="125" height="50" class="me-3">
+        <img src="../../assets/images/logo/antorchaff 1.png" alt="logo icon" width="47" height="48">
+        <button class="btn ms-0 py-5 rounded-0 bg-white" style="height: 50px;" (click)="toggleSidebar()"><img
+            src=".././assets/images/icons/Frame 194.png"></button>
+      </div>
+
+      <!-- header  -->
+      <app-header style="width: 80%"></app-header>
+    </div>
+    <div class="d-flex m-0 p-0">
+
       <!-- Sidebar -->
-      <div class="col-3 p-0" [ngClass]="{'d-none': !isSidebarOpen}">
-        <!-- Sidebar content goes here -->
+      <div class="bar"  [ngClass]="{'collapse' : !isSidebarOpen}" style="width: 20%; height: auto">
         <app-sidebar></app-sidebar>
       </div>
-      
+
       <!-- Main Content -->
-      <div class="col-9 m-0 p-0">
-        <!-- Main content goes here -->
+      <div class="m-0 p-0" [ngClass]="{'w-100' : !isSidebarOpen}" style="width: 80%">
         <div class="d-flex container-fluid">
-        <!-- <button class="btn ms-0 ps-0 me-2" (click)="toggleSidebar()"><img src=".././assets/images/icons/Frame 194.png"></button> -->
-        <app-header></app-header>
         </div>
         <router-outlet></router-outlet>
-        
+
+        <!-- footer  -->
         <footer>
-            <p class="greytext align-content-center fs-6 p-2">Enterprise Standard | API: v11.2.0 | Client: v11.2.0 [20240116]</p>
+          <p class="greytext align-content-center fs-6 p-2">Enterprise Standard | API: v11.2.0 | Client: v11.2.0
+            [20240116]</p>
         </footer>
 
       </div>
