--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -1,18 +1,24 @@
 .logo {
 background-color: #fff;
-height: 120;
+height: 90;
 }
 
-.bar {
-    background-image: url(../../assets/images/backgrounds/Frame\ 16\ \(1\).png);
-    height: 100%;
+
+li a:hover {
+    background-image: linear-gradient(to right,rgba(0, 158, 247, 0.2), rgba(0, 158, 247, 0));
+ border-left: 8px solid rgba(0, 158, 247, 1) ;
 }
 
-li a:hover, .nav-pills .nav-link.active {
-    border-left: 6px solid;
-    border-image: linear-gradient(rgba(129, 209, 255, 1), rgba(0, 158, 247, 1));
-    background-image: linear-gradient(to right, rgba(0, 158, 247, 0.2), rgba(0, 158, 247, 0));
+.bi:hover {
+    color: #3AB6FB;
 }
+
+.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
+    background-color: transparent;
+    background-image: linear-gradient(to right,rgba(0, 158, 247, 0.2), rgba(0, 158, 247, 0));
+ border-left: 8px solid rgba(0, 158, 247, 1) ;
+}
+
 
 .searchbox {
     background-color: rgba(255, 255, 255, 0.6);
